# bcg-game-theory

./: README.md  go.mod  pyproject.toml
cmd/: main.go
internal/actor/: actor.go  actor_test.go  factory.go  internal_actor.go  internal_actor_test.go  program_actor.go  program_actor_test.go
internal/game/: dilemma.go  game.go  participant.go  prisoner_dilemma.go  prisoner_dilemma_test.go  tournament.go  trust.go  ultimatum.go
tests/: echo.py  evil.py  hello.py  kind.py
tests/prisoners_dilemma/: kind.py  tit_for_tat.py
tests/trust/: evil.py  trustful.py
tests/ultimatum/: random_evil.py  random_kind.py
