[tool.poetry]
name = "bcg-game-theory"
version = "0.1.0"
description = "Платформа для проведения соревнований по теории игр в рамках трека \"Турнир\" чемпионата Bauman Code Games."
authors = ["Kirill Zhikharev <zhikh.k@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
